syntax = "proto3";

package runtimePackage;

service RuntimeService {
    rpc GetVideo (GetVideoRequest) returns (stream GetVideoRespone);
    rpc SendChatMessage (ChatMessageRequest) returns (ChatMessageResponse);
}

message GetVideoRequest {
    int32 id = 1;
}

message GetVideoRespone {
    bytes chunk = 1;
}

message ChatMessageRequest {
    string message = 1;
    int32 id = 2;
}

message ChatMessageResponse {
    string message = 1;
    int32 id = 2;
}
